manifest/demoteam/pullrequest/tullerundt/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pullrequest
    env: tullerundt
    team: demoteam
  name: pullrequest
spec:
  template:
    metadata:
      annotations:
        fnatt.io/inject-ca-bundle: enabled
        fnatt.io/inject-ca-env: enabled
      labels:
        team: demoteam
        app: pullrequest
        env: tullerundt
    spec:
      securityContext: {}
      topologySpreadConstraints:
      - whenUnsatisfiable: ScheduleAnyway
        maxSkew: 1
        labelSelector:
          matchLabels:
            app: pullrequest
            env: tullerundt
            team: demoteam
        topologyKey: kubernetes.io/hostname
      containers:
      - image: nginxinc/nginx-unprivileged:alpine3.22-perl
        resources:
          requests:
            cpu: '0.5'
            memory: 512Mi
          limits:
            cpu: '1'
            memory: 1Gi
        securityContext: {}
        ports:
        - containerPort: 8080
        command:
        - node
        args:
        - ./src/index.js
        name: main
  selector:
    matchLabels:
      team: demoteam
      app: pullrequest
      env: tullerundt
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0%
  progressDeadlineSeconds: 300
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: pullrequest
    env: tullerundt
    team: demoteam
  name: pullrequest
spec:
  ingressClassName: ingress-nginx-pm
  rules:
  - host: pullrequest.tullerundt.fnatt.no
    http:
      paths:
      - path: /
        backend:
          service:
            port:
              number: 80
            name: pullrequest
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pullrequest
    env: tullerundt
    team: demoteam
  name: pullrequest
spec:
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
  selector:
    app: pullrequest
    env: tullerundt
    team: demoteam
